--- a/styles/main.scss
+++ b/styles/main.scss
@@ -214,6 +214,7 @@
     gap: 0.5rem;
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
+    cursor: none;
 
     .langCard{
         background: var(--accent-color);
@@ -237,6 +238,17 @@
         }
     }
 }
+
+#textCursor{
+    position: absolute;
+    pointer-events: none;
+    font-size: 16px;
+    color: black;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    display: none;
+}
+
 
 html{
     padding-bottom: 10000px
