--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -34,6 +34,10 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
+    .mobileLinksContent{
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+    }
 }
 @media (min-width: $sz2){// 480px
 
