--- a/styles/main.scss
+++ b/styles/main.scss
@@ -78,6 +78,7 @@
 .mobileLinksContent{
     @include horizontalList;
     padding: 0.8rem 1.5rem;
+    
 
     .navLink{
         color: var(--text-heading-color);
@@ -214,7 +215,7 @@
     gap: 0.5rem;
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
-    cursor: none;
+    // cursor: none;
 
     .langCard{
         background: var(--accent-color);
@@ -234,7 +235,7 @@
         transition: background $transition-duration ease;
         img{
             width: 35px;
-            height: 40px
+            height: 40px;
         }
     }
 }
@@ -242,8 +243,7 @@
 #textCursor{
     position: absolute;
     pointer-events: none;
-    font-size: 16px;
-    color: black;
+    color: var(--text-heading-color);
     transform: translate(-50%, -50%);
     z-index: 1000;
     display: none;
