--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --background-color: #121212;
+  --backgroundColorRGB: 18,18,18;
   --accent-color: #1e1e1f;
   --button-color: #ffff;
   --button-text-color: #1e1e1f;
@@ -17,7 +18,8 @@
 }
 
 [data-theme=light] {
-  --background-color: #ffff;
+  --background-color: #ffffff;
+  --backgroundColorRGB: 255,255,255;
   --accent-color: #f3f3f3;
   --button-color: #121212;
   --button-text-color: #ffffff;
@@ -48,6 +50,30 @@ a {
   text-decoration: none;
 }
 
+@keyframes showCursor {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes hideCursor {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 .navbar {
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
@@ -257,6 +283,7 @@ a {
   gap: 0.5rem;
   justify-content: center;
   grid-template-columns: repeat(2, 1fr);
+  cursor: none;
 }
 .rightSectionContent .langCard {
   background: var(--accent-color);
@@ -278,10 +305,35 @@ a {
 #textCursor {
   position: absolute;
   pointer-events: none;
-  color: var(--text-heading-color);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0);
   z-index: 1000;
-  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--accent-color);
+  background: rgba(var(--backgroundColorRGB), 0.8);
+  border-radius: 50%;
+  -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.6);
+  -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.6);
+  box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.6);
+  height: 80px;
+  width: 80px;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show {
+  animation: showCursor 0.3s forwards;
+}
+
+.hide {
+  animation: hideCursor 0.3s forwards;
+}
+
+#langText {
+  font-size: var(--tagFontSize);
+  color: var(--text-heading-color);
+  text-align: center;
 }
 
 html {
