--- a/styles/main.scss
+++ b/styles/main.scss
@@ -215,7 +215,7 @@
     gap: 0.5rem;
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
-    // cursor: none;
+    cursor: none;
 
     .langCard{
         background: var(--accent-color);
@@ -243,12 +243,41 @@
 #textCursor{
     position: absolute;
     pointer-events: none;
-    color: var(--text-heading-color);
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
     z-index: 1000;
-    display: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid var(--accent-color);
+    background: rgba(var(--backgroundColorRGB), 0.8);
+    border-radius: 50%;
+
+    -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.6);
+    -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.6);
+    box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.6);
+
+    height: 80px;
+    width: 80px;
+
+    opacity: 0;
+    visibility: hidden;
 }
 
+.show {
+    animation: showCursor 0.3s forwards;
+}
+
+.hide{
+    animation: hideCursor 0.3s forwards;
+}
+
+#langText{
+    font-size: var(--tagFontSize);
+    color: var(--text-heading-color);
+    text-align: center;
+}
 
 html{
     padding-bottom: 10000px
