--- a/styles/main.css
+++ b/styles/main.css
@@ -174,6 +174,7 @@ a {
 
 #mainSection {
   min-height: 100vh;
+  position: relative;
   padding: 0 1.5rem;
   padding-top: 1.875rem;
 }
@@ -288,6 +289,9 @@ a {
   background: var(--accent-color);
   border-radius: 10px;
   padding: 1rem 1.5rem;
+  -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
+  -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
+  box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
   width: min-content;
   min-width: 100px;
   max-height: 90px;
@@ -325,6 +329,21 @@ a {
   font-size: var(--tagFontSize);
   color: var(--text-heading-color);
   text-align: center;
+}
+
+.watermark {
+  position: absolute;
+  left: 0;
+  top: 10rem;
+  z-index: -1;
+  transition: transform 0.1s ease-out;
+}
+.watermark .text {
+  font-size: 80px;
+  font-weight: 600;
+  text-wrap: nowrap;
+  opacity: 0.35;
+  color: var(--accent-color);
 }
 
 html {
@@ -417,6 +436,13 @@ html {
     display: block;
     transform: rotate(-75deg);
   }
+  .watermark {
+    top: 14rem;
+    left: -5rem;
+  }
+  .watermark .text {
+    font-size: 100px;
+  }
 }
 @media (min-width: 75rem) {
   :root {
@@ -434,8 +460,21 @@ html {
     padding: 2rem 2.5rem;
     min-width: 120px;
   }
+  #mainSection {
+    padding-top: 12rem;
+  }
+  .watermark {
+    top: 18rem;
+    left: -8rem;
+  }
+  .watermark .text {
+    font-size: 150px;
+  }
 }
 @media (min-width: 87.5rem) {
+  :root {
+    --headingFontSize: 3.125rem;
+  }
   .navbarContent {
     padding: 1rem 0;
   }
