--- a/styles/main.scss
+++ b/styles/main.scss
@@ -90,6 +90,7 @@
 // main section styles
 #mainSection{
     min-height: 100vh;
+    position: relative;
     
     padding: 0 1.5rem;
     padding-top: 1.875rem;
@@ -209,7 +210,6 @@
     }
 }
 
-
 .rightSectionContent{
     display: grid;
     gap: 0.5rem;
@@ -222,6 +222,9 @@
 
         padding: 1rem 1.5rem;
 
+        -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.8);
+        -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.8);
+        box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.8);
 
         width: min-content;
         min-width: 100px;
@@ -269,6 +272,34 @@
     color: var(--text-heading-color);
     text-align: center;
 }
+
+
+// watermark styles
+.watermark{
+    position: absolute;
+    left: 0;
+    top: 10rem;
+    z-index: -1;
+    transition: transform 0.1s ease-out;
+    .text{
+        font-size: 80px;
+        font-weight: 600;
+        text-wrap: nowrap;
+        opacity: 0.35;
+        color: var(--accent-color);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 html{
     padding-bottom: 10000px
