--- a/styles/main.scss
+++ b/styles/main.scss
@@ -287,6 +287,7 @@
         text-wrap: nowrap;
         opacity: 0.35;
         color: var(--accent-color);
+        transition: color $transition-duration ease;
     }
 }
 
