--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -106,6 +106,28 @@ a{
     align-items: center;
     font-size: var(--buttonFontSize);
     transition: transform 0.3s ease, color $transition-duration ease, background $transition-duration ease;
+
+    svg{
+        transform: rotate(-40deg);
+        margin-left: 0.2rem;
+
+        $svgSize: 17px;
+        width: $svgSize;
+        height: $svgSize;
+        transition: transform 0.3s ease;
+        
+        path{
+            stroke: var(--button-text-color);
+            transition: transform $transition-duration ease, stroke $transition-duration ease;
+        }
+    }
+
+    &:hover{
+        transform: scale(0.9);
+        svg{
+            transform: rotate(0);
+        }
+    }
 }
 
 
