--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,21 +8,21 @@
 @import 'mainSection';
 
 // watermark styles
-.watermark{
-    position: absolute;
-    left: 0;
-    top: 10rem;
-    z-index: -1;
-    transition: transform 0.1s ease-out;
-    .text{
-        font-size: 80px;
-        font-weight: 600;
-        text-wrap: nowrap;
-        opacity: 0.35;
-        color: var(--accent-color);
-        transition: color $transition-duration ease;
-    }
-}
+// .watermark{
+//     position: absolute;
+//     left: 1%;
+//     top: 10rem;
+//     z-index: -1;
+//     transition: transform 0.1s ease-out;
+//     .text{
+//         font-size: 80px;
+//         font-weight: 600;
+//         text-wrap: nowrap;
+//         opacity: 0.35;
+//         color: var(--accent-color);
+//         transition: color $transition-duration ease;
+//     }
+// }
 
 
 html{
