--- a/styles/main.css
+++ b/styles/main.css
@@ -51,6 +51,13 @@ a {
   text-decoration: none;
 }
 
+.sectionTitle {
+  font-size: var(--headingFontSize);
+  color: var(--text-heading-color);
+  font-weight: 600;
+  transition: color 0.4s ease;
+}
+
 @keyframes showCursor {
   0% {
     transform: translate(-50%, -50%) scale(0);
@@ -180,12 +187,6 @@ a {
   padding-top: 1.875rem;
 }
 
-.leftSectionContent .title {
-  font-size: var(--headingFontSize);
-  color: var(--text-heading-color);
-  font-weight: 600;
-  transition: color 0.4s ease;
-}
 .leftSectionContent .location {
   display: flex;
   margin-top: -7px;
@@ -257,7 +258,7 @@ a {
   transform: rotate(0);
 }
 
-.rightSection {
+#mainSection .rightSection {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -332,6 +333,37 @@ a {
   text-align: center;
 }
 
+#experienceSection {
+  background-color: blue;
+}
+.downloadResumeCTA {
+  background: var(--button-color);
+  color: var(--button-text-color);
+  padding: 0.5rem 1rem;
+  border-radius: 20px;
+  display: inline-flex;
+  align-items: center;
+  font-size: var(--buttonFontSize);
+  transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+}
+.downloadResumeCTA svg {
+  transform: rotate(-40deg);
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
+  transition: transform 0.3s ease;
+}
+.downloadResumeCTA svg path {
+  stroke: var(--button-text-color);
+  transition: transform 0.4s ease, stroke 0.4s ease;
+}
+.downloadResumeCTA:hover {
+  transform: scale(0.9);
+}
+.downloadResumeCTA:hover svg {
+  transform: rotate(0);
+}
+
 html {
   padding-bottom: 10000px;
 }
@@ -385,12 +417,12 @@ html {
     align-items: flex-start;
     justify-content: space-between;
   }
-  .leftSection {
+  #mainSection .leftSection {
     flex: 1;
     display: flex;
     justify-content: center;
   }
-  .rightSection {
+  #mainSection .rightSection {
     position: relative;
     flex: 1;
     justify-content: center;
@@ -410,7 +442,7 @@ html {
   }
 }
 @media (min-width: 62rem) {
-  .rightSection {
+  #mainSection .rightSection {
     flex-direction: row;
   }
   .myStackTitle {
