--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,9 @@
 // main section styles
 @import 'mainSection';
 
+// experience section styles
+@import 'experienceSection';
+
 // watermark styles
 // .watermark{
 //     position: absolute;
