fixed title styling

--- a/styles/_mainSection.scss
+++ b/styles/_mainSection.scss
@@ -6,6 +6,13 @@
     padding-top: 1.875rem;
 }
 
+#mainSection{
+    .leftSection{
+        display: flex;
+        justify-content: center;
+    }
+}
+
 // left section
 .leftSectionContent{
 
