--- a/styles/_mainSection.scss
+++ b/styles/_mainSection.scss
@@ -15,8 +15,6 @@
 
 // left section
 .leftSectionContent{
-
-
     .location{
         display: flex;
         margin-top: -7px;
@@ -129,7 +127,7 @@
         align-items: center;
         justify-content: center;
 
-        transition: background $transition-duration ease;
+        transition: background $transition-duration ease, box-shadow $transition-duration ease;
         img{
             width: 35px;
             height: 40px;
