--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -121,6 +121,7 @@
 
     // experience section
     #experienceSection{
+        padding-top: 4rem;
         flex-direction: row;
         // gap: 10rem;
         .leftSection{
