--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -474,6 +475,7 @@ html {
     top: 16rem;
   }
   #experienceSection {
+    padding-top: 4rem;
     flex-direction: row;
   }
   #experienceSection .leftSection {
