added more styles to experience section

--- a/styles/_experienceSection.scss
+++ b/styles/_experienceSection.scss
@@ -4,12 +4,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    margin-top: 8rem;
     .leftSection{
         // background: antiquewhite;
         display: flex;
         justify-content: flex-start;
-        
+        padding-bottom: 2rem;
     }
 
     .expTasks{
@@ -20,21 +20,39 @@
     .rightSection{
         .expBlock{
             margin-bottom: 1.5rem;
+            &:nth-last-child(1){
+                margin-bottom: 0;
+            }
+            // background-color: red;
+        }
+
+        .tagsContainer{
+            margin-bottom: 0.5rem;
         }
         .expTag{
+            font-size: var(--tagFontSize);
             background:var(--accent-color);
             color: var(--tag-text-color); 
+            padding: 0.3rem 1rem;
+            border-radius: 20px;
+            transition: background $transition-duration ease, color $transition-duration ease;
+            &:nth-child(1){
+                margin-right: 0.3rem;
+            }
         }
 
         .expTitle{
             color: var(--text-heading-color);
             font-weight: 400;
             font-size: var(--subHeadingFontSize);
+            margin-bottom: 0.5rem;
+            transition: color $transition-duration ease;
         }
 
         .expTasks{
             color: var(--text-color);
             font-size: var(--blockTextFontSize);
+            transition: color $transition-duration ease;
         }
     }
 }
